Fixing the spack configs and contiributing guidance

--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/compilers.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/compilers.yaml
@@ -8,7 +8,7 @@ compilers:
       fc: /usr/bin/gfortran
     flags: {}
     operating_system: ubuntu18.04
-    target: ivybridge
+    target: x86_64
     modules: []
     environment: {}
     extra_rpaths: [] 
@@ -21,7 +21,7 @@ compilers:
       fc: /usr/bin/gfortran
     flags: {}
     operating_system: ubuntu18.04
-    target: ivybridge
+    target: x86_64
     modules: []
     environment: {}
     extra_rpaths: []
