* Change to new version of finding devtools * Fix config-build.py's ability to use command line build path * Add script to build tpls for all specs on current machine locally and to shared area * Add host-configs that use shared libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,6 @@ project(serac LANGUAGES CXX)
 # MPI is required in Serac.
 set(ENABLE_MPI ON CACHE BOOL "")
 
-# Find devtools before loading BLT which sets up their targets
-include(${PROJECT_SOURCE_DIR}/cmake/SeracFindDevtools.cmake)
-
 #------------------------------------------------------------------------------
 # Setup BLT
 #------------------------------------------------------------------------------
@@ -43,8 +40,9 @@ endif()
 if (NOT BLT_CXX_STD)
     set(BLT_CXX_STD "c++11" CACHE STRING "")
 endif()
-set(ENABLE_CLANGQUERY OFF CACHE BOOL "")
-set(ENABLE_UNCRUSTIFY OFF CACHE BOOL "")
+set(ENABLE_CLANGFORMAT OFF CACHE BOOL "")
+set(ENABLE_CLANGQUERY  OFF CACHE BOOL "")
+set(ENABLE_UNCRUSTIFY  OFF CACHE BOOL "")
 
 include(${BLT_SOURCE_DIR}/SetupBLT.cmake)
 
