--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/devtools/packages.yaml
@@ -15,7 +15,7 @@
 # -------------------------------------------------------------------------
 packages:
   all:
-    # This defaults us to machine specific flags of ivybridge which is allows
+    # This defaults us to machine specific flags of ivybridge which allows
     # us to run on broadwell as well
     target: [ivybridge]
     compiler: [gcc, intel, pgi, clang, xl, nag]
