Fixing the build warnings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,12 @@
    "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch Serac",
+            "name": "(gcc/gdb) Launch Serac",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build-gcc@7.4.0-debug/bin/serac",
             "args": ["-m", "${workspaceFolder}/data/beam-hex.mesh"],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}/build-gcc@7.4.0-debug/bin/",
             "environment": [],
             "externalConsole": false,
