--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -49,11 +49,11 @@ release_resources_build_quartz:
     - .test_toss_3_x86_64_ib_script
   stage: test
 
-.clean_quartz:
-  extends:
-    - .quartz_common
-    - .clean_toss_3_x86_64_ib_script
-  stage: clean
+  #.clean_quartz:
+  #  extends:
+  #    - .quartz_common
+  #    - .clean_toss_3_x86_64_ib_script
+  #  stage: clean
 
 ####
 # Here are all quartz dependencies jobs
@@ -100,23 +100,23 @@ build_quartz_intel_18_0_2:
     SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
-####
-# Here are all quartz tests jobs
-
-clean_quartz_clang_4_0_0:
-  variables:
-    COMPILER: "clang@4.0.0"
-    SPEC: "@develop%${COMPILER}"
-  extends: .clean_quartz
-
-clean_quartz_gcc_8_1_0:
-  variables:
-    COMPILER: "gcc@8.1.0"
-    SPEC: "@develop%${COMPILER}"
-  extends: .clean_quartz
-
-clean_quartz_intel_19_0_4:
-  variables:
-    COMPILER: "intel@19.0.4"
-    SPEC: "@develop%${COMPILER}"
-  extends: .clean_quartz
+  #####
+  ## Here are all quartz tests jobs
+  #
+  #clean_quartz_clang_4_0_0:
+  #  variables:
+  #    COMPILER: "clang@4.0.0"
+  #    SPEC: "@develop%${COMPILER}"
+  #  extends: .clean_quartz
+  #
+  #clean_quartz_gcc_8_1_0:
+  #  variables:
+  #    COMPILER: "gcc@8.1.0"
+  #    SPEC: "@develop%${COMPILER}"
+  #  extends: .clean_quartz
+  #
+  #clean_quartz_intel_19_0_4:
+  #  variables:
+  #    COMPILER: "intel@19.0.4"
+  #    SPEC: "@develop%${COMPILER}"
+  #  extends: .clean_quartz
