--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,72 +5,14 @@
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  SLURM_ALLOC_NAME: serac_$CI_COMMIT_SHORT_SHA
-  BUILD_ROOT: $CI_BUILDS_DIR/serac/${CI_COMMIT_REF_SLUG}_${CI_PIPELIN_ID}
-  LIBS_ROOT: $CI_BUILDS_DIR/serac/${CI_COMMIT_REF_SLUG}_${CI_PIPELINE_ID}/libs
-  SPACK_MIRROR: /usr/workspace/radiuss/mirrors/packages
-
-before_script:
-  - date
-
-after_script:
-  - date
+  SLURM_ALLOC_NAME: serac_${CI_PIPELINE_ID}
+  BUILD_ROOT: ${CI_PROJECT_DIR}
 
 # There are no tests for now
 stages:
-  - setup
   - allocate_resources
-  - dependencies
   - build
-  - test
   - release_resources
-  - clean
-
-setup_env:
-  stage: setup
-  tags:
-    - shell
-    - quartz
-  script:
-    - mkdir -p ${BUILD_ROOT}
-
-.dependencies_toss_3_x86_64_ib_script:
-  script:
-    - echo ${SLURM_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
-    - echo ${JOBID}
-    - rm -rf ${LIBS_ROOT}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --prefix=${LIBS_ROOT}_${COMPILER} --spec=${SPEC}
-    - mv ${LIBS_ROOT}/${COMPILER}.cmake ${BUILD_ROOT}/${SYS_TYPE}_${COMPILER}.cmake
-
-# This is not a job, but contains project specific build commands
-# If an allocation exist with the name defined in this pipeline, the job will use it
-.build_toss_3_x86_64_ib_script:
-  script:
-    - echo ${SLURM_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
-    - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --build-only
-
-# This is not a job, but contains project specific build commands
-.test_toss_3_x86_64_ib_script:
-  script:
-    - echo ${SLURM_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
-    - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --test-only
-
-# Butte uses a very different job allocation system, building on login nodes is recommended
-.build_blueos_3_ppc64le_ib_script:
-  script:
-    - lalloc 1 scripts/gitlab/build_and_test.sh
-
-.build_blueos_3_ppc64le_ib_p9_script:
-  extends: .build_blueos_3_ppc64le_ib_script
-
-  #.clean_toss_3_x86_64_ib_script:
-  #  script:
-  #    - rm -rf ${BUILD_ROOT}
 
 # This is where jobs are included
 include:
