--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -1,6 +1,6 @@
 ####
 # This is the share configuration of jobs for quartz
-.quartz_common:
+.on_quartz:
   tags:
     - shell
     - quartz
@@ -13,7 +13,7 @@
 ####
 # In pre-build phase, allocate a node for builds
 allocate_resources_build_quartz:
-  extends: .quartz_common
+  extends: .on_quartz
   stage: allocate_resources
   script:
     - salloc -N 1 -c 36 -p pdebug -t 30 --no-shell --job-name=${SLURM_ALLOC_NAME}
@@ -22,7 +22,7 @@ allocate_resources_build_quartz:
 # In post-build phase, deallocate resources
 # Note : make sure this is run even on build phase failure
 release_resources_build_quartz:
-  extends: .quartz_common
+  extends: .on_quartz
   stage: release_resources
   script:
     - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
@@ -30,93 +30,33 @@ release_resources_build_quartz:
   when: always
 
 ####
-# Generic quartz jobs
-.dependencies_quartz:
-  extends:
-    - .quartz_common
-    - .dependencies_toss_3_x86_64_ib_script
-  stage: dependencies
-
+# Template
 .build_quartz:
-  extends:
-    - .quartz_common
-    - .build_toss_3_x86_64_ib_script
+  extends: .on_quartz
   stage: build
-
-.test_quartz:
-  extends:
-    - .quartz_common
-    - .test_toss_3_x86_64_ib_script
-  stage: test
-
-  #.clean_quartz:
-  #  extends:
-  #    - .quartz_common
-  #    - .clean_toss_3_x86_64_ib_script
-  #  stage: clean
+  script:
+    - JOBID="$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)"
+    - JOBID="$( [[ -n ${JOBID} ]] && echo --jobid=${JOBID} )"
+    - EXEC_PREFIX="srun ${JOBID} -t 20 -N 1 -n 1 -c 4"
+    - ${EXEC_PREFIX} python scripts/uberenv/uberenv.py --spec=${SPEC}
+    - ${EXEC_PREFIX} scripts/gitlab/build_and_test.sh
 
 ####
-# Here are all quartz dependencies jobs
-
-dependencies_quartz_clang_4_0_0:
-  variables:
-    COMPILER: "clang@4.0.0"
-    SPEC: "@develop%${COMPILER}"
-  extends: .dependencies_quartz
-
-dependencies_quartz_gcc_8_1_0:
-  variables:
-    COMPILER: "gcc@8.1.0"
-    SPEC: "@develop%${COMPILER}"
-  extends: .dependencies_quartz
-
-dependencies_quartz_intel_19_0_4:
-  variables:
-    COMPILER: "intel@19.0.4"
-    SPEC: "@develop%${COMPILER}"
-  extends: .dependencies_quartz
-
-####
-# Here are all quartz build jobs
-
+# Build jobs
 build_quartz_clang_4_0_0:
-  needs: ["dependencies_quartz_clang_4_0_0"]
   variables:
     COMPILER: "clang@4.0.0"
     SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
 build_quartz_gcc_8_1_0:
-  needs: ["dependencies_quartz_gcc_8_1_0"]
   variables:
     COMPILER: "gcc@8.1.0"
     SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
 build_quartz_intel_18_0_2:
-  needs: ["dependencies_quartz_intel_19_0_4"]
   variables:
     COMPILER: "intel@19.0.4"
     SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
-
-  #####
-  ## Here are all quartz tests jobs
-  #
-  #clean_quartz_clang_4_0_0:
-  #  variables:
-  #    COMPILER: "clang@4.0.0"
-  #    SPEC: "@develop%${COMPILER}"
-  #  extends: .clean_quartz
-  #
-  #clean_quartz_gcc_8_1_0:
-  #  variables:
-  #    COMPILER: "gcc@8.1.0"
-  #    SPEC: "@develop%${COMPILER}"
-  #  extends: .clean_quartz
-  #
-  #clean_quartz_intel_19_0_4:
-  #  variables:
-  #    COMPILER: "intel@19.0.4"
-  #    SPEC: "@develop%${COMPILER}"
-  #  extends: .clean_quartz
