Made openmpi the default

--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
@@ -2,7 +2,7 @@ packages:
   all:
     compiler: [gcc, clang]
     providers:
-      mpi: [mpich, openmpi]
+      mpi: [openmpi]
       blas: [openblas]
       lapack: [openblas]
       gl: [opengl]
