--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -39,10 +39,28 @@ release_resources_build_quartz:
   extends: .on_quartz
   stage: build
   script:
+    #Use pre-existing allocation if any
     - JOBID=$(squeue -h --name=${PROJECT_ALLOC_NAME} --format=%A)
-    - JOBID=$(if [[ -n "${JOBID}" ]]; then echo "--jobid=${JOBID}"; fi)
-    - EXEC_PREFIX="srun ${JOBID} -t 20 -N 1 -n 1 -c 4"
-    - ${EXEC_PREFIX} scripts/gitlab/build_and_test.sh
+    - ASSIGN_ID=$(if [[ -n "${JOBID}" ]]; then echo "--jobid=${JOBID}"; fi)
+    - EXEC_PREFIX="srun ${ASSIGN_ID}"
+    #DEPENDENCIES
+    - RESOURCES="-t 20 -N 1 -n 1 -c 4"
+    - echo -e "section_start:$(date +%s):dependencies\r\e[0K
+      Build dependencies and generate host-config file (uberenv)"
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --deps-only
+    - echo -e "section_end:$(date +%s):dependencies\r\e[0K"
+    #BUILD
+    - RESOURCES="-t 5 -N 1 -n 1 -c 4"
+    - echo -e "section_start:$(date +%s):build\r\e[0K
+      Build ${CI_PROJECT_NAME}"
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --build-only
+    - echo -e "section_end:$(date +%s):build\r\e[0K"
+    #TEST
+    - RESOURCES="-t 5 -N 1 -n 1 -c 4"
+    - echo -e "section_start:$(date +%s):tests\r\e[0K
+      Test ${CI_PROJECT_NAME}"
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/gitlab/build_and_test.sh --test-only
+    - echo -e "section_end:$(date +%s):tests\r\e[0K"
 
 ####
 # Build jobs
