Remove gtest as dependency, Pass mesh through cmake so it's always found

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -74,10 +74,10 @@ if (ENABLE_GTEST)
         NAME       serac_dtor
         SOURCES    serac_dtor.cpp
         OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
-        DEPENDS_ON solvers mpi mfem gtest )
+        DEPENDS_ON solvers mpi mfem )
     blt_add_test(
         NAME              serac_dtor
-        COMMAND           serac_dtor
+        COMMAND           serac_dtor -m ${PROJECT_SOURCE_DIR}/data/beam-hex.mesh
         NUM_MPI_TASKS     4
         WORKING_DIRECTORY ${TEST_OUTPUT_DIRECTORY} )
 
