More docker fixes

--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
@@ -61,7 +61,7 @@ packages:
     paths:
       cmake: /usr
     buildable: False
-  libtool:
+  hwloc:
     paths:
-      libtool: /usr
+      hwloc: /usr
     buildable: False
