--- a/scripts/uberenv/spack_configs/docker/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/packages.yaml
@@ -28,7 +28,7 @@ packages:
       lapack: [openblas]
       mkl: [intel-mkl]
       mpe: [mpe2]
-      mpi: [mpich]
+      mpi: [openmpi]
       opencl: [pocl]
       openfoam: [openfoam-com, openfoam-org, foam-extend]
       pil: [py-pillow]
@@ -58,7 +58,7 @@ packages:
    paths:
       m4: /usr/bin/
    buildable: False
-  pkg-config:
+  pkg-config:`
     paths:
       pkg-config: /usr/bin/
     buildable: False 
@@ -70,10 +70,16 @@ packages:
     paths:
       graphviz: /usr/bin/
     buildable: False
-  raja:
-    paths:
-      raja: /usr/local/share/raja/cmake
-    buildable: False
 # Globally lock in version of CMake
   cmake:
     version: [3.10.1]
+  mfem:
+    version: [4.0.0]
+  hypre:
+    version: [2.11.1]
+  superlu-dist:
+    version: [5.4.0]
+  parmetis:
+    version: [4.0.3]
+  metis:
+    version: [5.1.0]
