fix typo in spack config

--- a/scripts/uberenv/spack_configs/docker/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/packages.yaml
@@ -58,7 +58,7 @@ packages:
    paths:
       m4: /usr/bin/
    buildable: False
-  pkg-config:`
+  pkg-config:
     paths:
       pkg-config: /usr/bin/
     buildable: False 
