fixing the typo

--- a/scripts/uberenv/spack_configs/docker/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/packages.yaml
@@ -70,7 +70,7 @@ packages:
   graphviz:
     paths:
       graphviz: /usr/bin/
-    buildable: Falsei
+    buildable: False
   openblas:
     paths:
       openblas: /usr
