--- a/scripts/docker/Dockerfile
+++ b/scripts/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM axom/compilers:gcc-8
 MAINTAINER Jamie Bramwell bramwell1@llnl.gov
 
 RUN sudo apt-get update -y
-RUN sudo apt-get install curl pkg-config build-essential gfortran libgfortran3 libgfortran4 libopenblas-dev -fy
+RUN sudo apt-get install curl ssh pkg-config build-essential gfortran libgfortran3 libgfortran4 libopenblas-dev -fy
 
 RUN useradd -ms /bin/bash serac && echo "serac:serac" | chpasswd && adduser serac sudo
 
@@ -12,6 +12,8 @@ USER serac
 RUN git clone --recursive https://github.com/LLNL/serac.git
 
 WORKDIR "/home/serac/serac"
+
+RUN git checkout feature/bramwell/docker
 
 RUN ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/uberenv/spack_configs/docker/ --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
 
