Fixed typo in dockerfile

--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -18,6 +18,6 @@ RUN git checkout feature/bramwell/docker
 
 RUN ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/uberenv/spack_configs/docker/ --spec=%gcc@8.1.0 --prefix=/home/serac/serac_tpls -k
 
-WORKDIR "home/serac"
+WORKDIR "/home/serac"
 
 RUN rm -rf serac
