--- a/scripts/uberenv/spack_configs/config.yaml
+++ b/scripts/uberenv/spack_configs/config.yaml
@@ -55,7 +55,7 @@ config:
 
   # Cache directory for miscellaneous files, like the package index.
   # This can be purged with `spack purge --misc-cache`
-  misc_cache: ~/.spack/cache
+  misc_cache: .spack/misccache
 
 
   # If this is false, tools like curl that use SSL will not verify
