Update to clang@9.0.0 and intel@19.0.4 with a newer libstdc++, add ability to use spack's global compiler flags, quiet cmake warning

--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/compilers.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/compilers.yaml
@@ -2,7 +2,9 @@ compilers:
 - compiler:
     environment: {}
     extra_rpaths: []
-    flags: {}
+    flags:
+      cflags: --gcc-toolchain=/usr/tce/packages/gcc/gcc-8.1.0
+      cxxflags: --gcc-toolchain=/usr/tce/packages/gcc/gcc-8.1.0
     modules:
     - clang/9.0.0
     operating_system: rhel7
@@ -30,13 +32,16 @@ compilers:
 - compiler:
     environment: {}
     extra_rpaths: []
-    flags: {}
+    flags:
+      cflags: -gcc-name=/usr/tce/packages/gcc/gcc-8.1.0/bin/gcc
+      cxxflags: -gxx-name=/usr/tce/packages/gcc/gcc-8.1.0/bin/g++
+      fflags: -gcc-name=/usr/tce/packages/gcc/gcc-8.1.0/bin/gcc
     modules: []
     operating_system: rhel7
     paths:
-      cc: /usr/tce/packages/intel/intel-19.0.0/bin/icc
-      cxx: /usr/tce/packages/intel/intel-19.0.0/bin/icpc
-      f77: /usr/tce/packages/intel/intel-19.0.0/bin/ifort
-      fc: /usr/tce/packages/intel/intel-19.0.0/bin/ifort
-    spec: intel@19.0.0
+      cc: /usr/tce/packages/intel/intel-19.0.4/bin/icc
+      cxx: /usr/tce/packages/intel/intel-19.0.4/bin/icpc
+      f77: /usr/tce/packages/intel/intel-19.0.4/bin/ifort
+      fc: /usr/tce/packages/intel/intel-19.0.4/bin/ifort
+    spec: intel@19.0.4
     target: x86_64
