Split pipeline in two workflow: PR and Master

--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -15,7 +15,7 @@
 allocate_resources_build_quartz:
   variables:
     GIT_STRATEGY: none
-  extends: .on_quartz
+  extends: [.pr_workflow, .on_quartz]
   stage: allocate_resources
   script:
     - salloc -N 1 -c 36 -p pdebug -t 30 --no-shell --job-name=${PROJECT_ALLOC_NAME}
@@ -26,7 +26,7 @@ allocate_resources_build_quartz:
 release_resources_build_quartz:
   variables:
     GIT_STRATEGY: none
-  extends: .on_quartz
+  extends: [.pr_workflow, .on_quartz]
   stage: release_resources
   script:
     - export JOBID=$(squeue -h --name=${PROJECT_ALLOC_NAME} --format=%A)
@@ -35,26 +35,45 @@ release_resources_build_quartz:
 
 ####
 # Template
-.build_quartz:
+.pr_build_on_quartz:
   stage: build
-  extends: [.srun_build_script, .on_quartz]
+  extends: [.pr_workflow, .srun_build_script, .on_quartz]
+
+.master_build_with_deps_on_quartz:
+  stage: build_with_deps
+  extends: [.master_workflow, .srun_build_with_deps_script, .on_quartz]
 
 ####
 # Build jobs
-build_quartz_clang_9_0_0:
+clang_9_0_0 (PR build_on_quartz):
   variables:
     COMPILER: "clang@9.0.0"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-clang@9.0.0.cmake"
-  extends: .build_quartz
+  extends: .pr_build_on_quartz
 
-build_quartz_gcc_8_1_0:
+gcc_8_1_0 (PR build_on_quartz):
   variables:
     COMPILER: "gcc@8.1.0"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-gcc@8.1.0.cmake"
-  extends: .build_quartz
+  extends: .pr_build_on_quartz
 
-build_quartz_intel_19_0_4:
+intel_19_0_4 (PR build_on_quartz):
   variables:
     COMPILER: "intel@19.0.4"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-intel@19.0.4.cmake"
-  extends: .build_quartz
+  extends: .pr_build_on_quartz
+
+clang_9_0_0 (Master build_with_deps_on_quartz):
+  variables:
+    COMPILER: "clang@9.0.0"
+  extends: .master_build_with_deps_on_quartz
+
+gcc_8_1_0 (Master build_with_deps_on_quartz):
+  variables:
+    COMPILER: "gcc@8.1.0"
+  extends: .master_build_with_deps_on_quartz
+
+intel_19_0_4 (Master build_with_deps_on_quartz):
+  variables:
+    COMPILER: "intel@19.0.4"
+  extends: .master_build_with_deps_on_quartz
