--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,19 @@ stages:
   - allocate_resources
   - build
   - release_resources
+  - build_with_deps
 
 # Whether and how to update uberenv
 .run_update_uberenv: &run_update_uberenv |
   [[ -n "${UPDATE_UBERENV}" ]] && ./scripts/gitlab/update-uberenv.sh "${UPDATE_UBERENV}"
+
+.pr_workflow:
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "master" && $BUILD_DEPS != "ON"' #run only if ...
+
+.master_workflow:
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master" || $BUILD_DEPS == "ON"' #run only if ...
 
 ####
 # Template
