--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -4,18 +4,19 @@
   tags:
     - shell
     - quartz
-  except:
-    refs:
-      - /_qnone/
-    variables:
-      - $SERAC_CI_QUARTZ == "OFF"
+  rules:
+    - if: '$CI_COMMIT_BRANCH =~ /_qnone/ || $ON_QUARTZ == "OFF"' #run except if ...
+      when: never
+    - if: '$CI_JOB_NAME =~ /release_resources/'
+      when: always
+    - when: on_success
 
 ####
 # In pre-build phase, allocate a node for builds
 allocate_resources_build_quartz:
   variables:
     GIT_STRATEGY: none
-  extends: [.pr_workflow, .on_quartz]
+  extends: [.on_quartz, .pr_workflow]
   stage: allocate_resources
   script:
     - salloc -N 1 -c 36 -p pdebug -t 30 --no-shell --job-name=${PROJECT_ALLOC_NAME}
@@ -26,12 +27,11 @@ allocate_resources_build_quartz:
 release_resources_build_quartz:
   variables:
     GIT_STRATEGY: none
-  extends: [.pr_workflow, .on_quartz]
+  extends: [.on_quartz, .pr_workflow]
   stage: release_resources
   script:
     - export JOBID=$(squeue -h --name=${PROJECT_ALLOC_NAME} --format=%A)
     - if [[ -n "${JOBID}" ]]; then scancel ${JOBID}; fi
-  when: always
 
 ####
 # Template
