fixing the axom and conduit version numbers in the linux ubuntu config

--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
@@ -8,6 +8,10 @@ packages:
       gl: [opengl]
       glu: [openglu]
 # Lock down versions of packages we depend on
+  axom:
+    version: [develop]
+  conduit:
+    version: [master]
   mfem:
     version: [4.0.0]
   hypre:
