--- a/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/blueos_3_ppc64le_ib/packages.yaml
@@ -45,13 +45,11 @@ packages:
       cuda@8.0: /usr/tce/packages/cuda/cuda-8.0
     buildable: False
 # LLNL blueos mpi
-# note, we need to fake this as an existing mpi package
-# so even though this is spectrum mpi, we call it mvapich2
-  mvapich2:
+  spectrum-mpi:
     paths:
-      mvapich2@2.2%gcc@4.9.3: /usr/tcetmp/packages/spectrum-mpi/spectrum-mpi-2017.04.03-gcc-4.9.3
-      mvapich2@2.2%clang@coral: /usr/tcetmp/packages/spectrum-mpi/spectrum-mpi-2017.04.03-clang-4.0.0
-      mvapich2@2.2%xl@13.1 : /usr/tcetmp/packages/spectrum-mpi/spectrum-mpi-2017.11.10-xl-beta-2017.10.13
+      spectrum-mpi@release%gcc@4.9.3: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-gcc-4.9.3/ 
+      spectrum-mpi@release%clang@coral: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-upstream-2018.12.03/
+      spectrum-mpi@release%xl@coral: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-xl-2018.11.26/ 
     buildable: False
 
 
