First cut at the thermal-structural test. It still has an error.

--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -12,6 +12,7 @@ set(coefficients_sources
 set(coefficients_headers
     loading_functions.hpp
     traction_coefficient.hpp
+    linear_coefficient.hpp
     stdfunction_coefficient.hpp
     )
 
