Reverting the version changes in the 18 configs

--- a/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
@@ -62,4 +62,14 @@ packages:
     paths:
       cmake@3.10.2: /usr
     buildable: False
-
+# Lock in versions of Devtools
+  cppcheck:
+    version: [1.82]
+    paths:
+      cppcheck: /usr/bin/cppcheck
+    buildable: False
+  doxygen:
+    version: [1.8.13]
+    paths:
+      doxygen: /usr/bin/doxygen
+    buildable: False   
